--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
@@ -20,10 +20,28 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    appcompat_version = '1.1.0'
+    ktx_version = '1.2.0'
+    constraintlayout_version = '1.1.3'
+    recyclerview_version = '1.1.0'
+    material_version = '1.2.0-alpha06'
+    glide_version = '4.11.0'
+    rxjava_version = '2.2.12'
+    rxandroid_version = '2.1.1'
+    rxbinding_version = '3.0.0-alpha2'
+    rxlifecycle_version = '3.1.0'
+    junit_version = '4.12'
+    mockk_version = '1.9.3.kotlin12'
+    espresso_version = '3.2.0'
+    ext_junit_version = '1.1.1'
+    andyawdlibrary_version = '2.1.0'
 }
